# simplemm

./: Cargo.toml  LICENSE  shell.nix
migrations/2020-11-19-222730_create_posts/: down.sql  up.sql
migrations/2020-12-12-210734_list_language/: down.sql  up.sql
mysql/: schema.sql
src/: LICENSE  client.rs  config.rs  database.rs  error.rs  file.rs  lib.rs  parse_mail.rs  request.rs  schema.rs  state.rs  types.rs
