[package]
serde = "~1.0.117"
name = "simplemm"
version = "0.0.1"
authors = ["Kilian Kilger <kkilger@gmail.com>"]
edition = "2018"

[dependencies]
log = "~0.4.11"
serde = { version = "~1.0.117", features = ["derive"] }
snafu = { version = "~0.6.9", features = ["backtraces"] }
email-format = "~0.8.0"
email = "~0.0.21"
syslog = "^5.0"
daemonize = "~0.4.1"
toml = "~0.5"
clap = "~2.33.3"
diesel = { version = "~1.4.4", features = ["mysql"] }
