[package]
name = "simplemm"
version = "0.0.1"
authors = ["Kilian Kilger <kkilger@gmail.com>"]
edition = "2018"

[dependencies]
faccess = "~0.2.3"
log = "~0.4.11"
serde = { version = "~1.0.117", features = ["derive"] }
snafu = { version = "~0.6.9", features = ["backtraces"] }
email-format = "~0.8.0"
email = "~0.0.21"
syslog = "^5.0"
daemonize = "~0.4.1"
toml = "~0.5"
clap = "~2.33.3"
diesel = { version = "~1.4.4", features = ["mysql"] }
ctrlc = { version = "~3.1.7", features = ["termination"] }
serde_json = "~1.0.59"
lazy_static = "~1.4.0"
chrono = { version = "~0.4.19", features = ["serde"] }
